@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-01 Kimmo
+ PATCH: [ 1531845 ] Fix memory leak after find
+  Src/editlib: ccrystaltextview.cpp
+
 2006-07-31 Kimmo
  PATCH: [ 1531293 ] Fix wrong cursor position after find
   Src: ccrystaltextview.cpp ccrystaltextview.h cfindtextdlg.cpp
